Load key from classloader